FIXING THE BUGS